Implemented function to reverse the string

--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,11 @@
                     }
                 }
 
-                console.debug(sum);
+                console.debug(reverse(sum));
             });
         });
+
+        const reverse = input => input.split('').reverse().join('');
     </script>
 </body>
 
