--- a/src/index.html
+++ b/src/index.html
@@ -7,77 +7,19 @@
 
 <body>
     <form>
-        <p>Hello, world</p>
-        <label>Augend
-            <input id="augend" name="augend" value="11">
-        </label>
-
-        <label>Addend
-            <input id="addend" name="addend" value="10">
-        </label>
-
-        <p>
-            <input id="equalsButton" type="submit" value="=">
-        </p>
+        <input type="text" id="digitDisplay">
+        <input type="button" id="buttonClearAll" value="C">
+        <input type="button" id="buttonDigitOne" value="1">
+        <input type="button" id="buttonDigitZero" value="0">
+        <input type="button" id="buttonOperatorAdd" value="+">
+        <input type="button" id="buttonOperatorEquals" value="=">
     </form>
 
+    <script src="AppContext.js"></script>
     <script type="text/javascript">
-        const and = (op1, op2) => op1 & op2;
-
-        const or = (op1, op2) => op1 | op2;
-
-        const xor = (op1, op2) => op1 ^ op2;
-
-        const halfAdder = (augend, addend) => {
-            let s = xor(augend, addend);
-            let c = and(augend, addend);
-
-            return {
-                'sum': s,
-                'carry': c
-            };
-        };
-
-        const fullAdder = (augend, addend, carry) => {
-            let temp = halfAdder(augend, addend);
-            let sum = xor(carry, temp.sum);
-            carry = and(carry, temp.sum);
-            carry = or(carry, temp.carry);
-
-            return {
-                'sum': sum,
-                'carry': carry
-            };
-        };
-
         addEventListener('DOMContentLoaded', (event) => {
-            let equals = document.querySelector('#equalsButton');
-
-            equals.addEventListener('click', event => {
-                event.preventDefault();
-
-                let augend = document.querySelector('#augend').value;
-                let addend = document.querySelector('#addend').value;
-                let sum = '';
-                let result = null;
-                let carry = 0; /// No carry in the first iteration
-
-                for (let i = augend.length - 1; i >= 0; i--) {
-                    result = fullAdder(augend[i], addend[i], carry);
-                    sum = result.sum + sum;
-                    carry = result.carry;
-
-                    console.debug(i, augend[i], addend[i], result);
-                    
-                    func = fullAdder;
-                }
-
-                if (carry === 1) {
-                    sum = carry + sum;
-                }
-
-                console.debug('sum', sum);
-            });
+            let context = new AppContext();
+            console.debug(context.getDisplay());
         });
     </script>
 </body>
