Implemented the AppModel class to evaluate the expression when the equals button is pressed.

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     </form>
 
     <script src="AppContext.js"></script>
+    <script src="AppModel.js"></script>
+    <script src="AddToken.js"></script>
+    <script src="IntegerToken.js"></script>
     <script type="text/javascript">
         addEventListener('DOMContentLoaded', (event) => {
             let context = new AppContext();
