Implemented the Subtract token.

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,14 @@
         <input type="button" id="buttonDigitOne" value="1">
         <input type="button" id="buttonDigitZero" value="0">
         <input type="button" id="buttonOperatorAdd" value="+">
+        <input type="button" id="buttonOperatorSubtract" value="-">
         <input type="button" id="buttonOperatorEquals" value="=">
     </form>
 
     <script src="AppContext.js"></script>
     <script src="AppModel.js"></script>
     <script src="AddToken.js"></script>
+    <script src="SubtractToken.js"></script>
     <script src="IntegerToken.js"></script>
     <script type="text/javascript">
         addEventListener('DOMContentLoaded', (event) => {
