--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <form>
         <input type="text" id="digitDisplay">
         <input type="button" id="buttonClearAll" value="C">
+        <input type="button" id="buttonClearExpression" value="CE">
         <input type="button" id="buttonDigitOne" value="1">
         <input type="button" id="buttonDigitZero" value="0">
         <input type="button" id="buttonOperatorAdd" value="+">
