Disabled the text display input element.

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
 <body>
     <form>
-        <input type="text" id="digitDisplay">
+        <input type="text" id="digitDisplay" disabled>
         <div id="controls">
             <span id="col-1" class="column">
                 <input type="button" id="buttonClearAll" value="C">
