Implemented an expression display in the UI to show all the tokens in the current calculation.

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <body>
     <form>
         <div id="brand">Binaca</div>
+        <div id="expressionDisplay">&nbsp;</div>
         <label>
             <input type="text" id="digitDisplay" disabled>
         </label>
